发布Hadoop3.2.0伪分布式系统搭建

--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,9 @@ theme: hexo-theme-matery
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: ubuntu@111.231.116.162:/var/repo/hexo_static
+  repo:
+        CVM: ubuntu@111.231.116.162:/var/repo/hexo_static
+        github: git@github.com:SeanLi-OI/SeanLi-OI.github.io.git
   branch: master
 
 search:
